[package]
name = "nycu-gdc-game-jam-0th"
version = "0.1.0"
description = "Submission to NYCU GDC Game Jam 0thh"
authors = ["Bogay <pojay11523@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rand = "0.9.1"
tui-big-text = "0.7.1"
toml = "0.8.23"
tui-logger = { version = "0.17.3", features = ["tracing-support"] }
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
log = { version = "0.4", features = ["kv"] }
